--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -9,25 +9,13 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header">
-            <H1>Hello, folks, I'm a carbon atom.</H1>
+        <div>
+            <h1>
+                <a href="/">Django Girls Blog</a>
+            </h1>
         </div>
-        <!-- <div class="main">
-            <p class="main-time-published">published: 26.10.2018, 17:35</p>
-            <h2 class="main-head-post">
-                <a class="main-head-post_link-post" href="#">My first post</a>
-            </h2>
-            <p class="main-post-text">
-                 🌾 Gold and silver is the autumn Soft and tender are her skies Yes and no are the answers Written in my true love's eyes Autumn's
-                leaving and winter's coming I think that I'll be moving along I've got to leave her and find another I've got to sing my
-                heart's true song Round and round the burning circle All the seasons: one, two, and three Autumn leaves and then there winter
-                Spring is born and wanders free Gold and silver burns my autumns All too soon they'd fade and die And then I'd know, there'd
-                be no others Milk and honey were their lies 🍂
-               
-            </p>
-        </div>
-        <div class="footer"></div> -->
-         {% for post in posts %}
+        
+        {% for post in posts %}
         <div>
             <p>published: {{ post.published_date }}</p>
             <h1>
@@ -36,6 +24,7 @@
             <p>{{ post.text|linebreaksbr }}</p>
         </div>
         {% endfor %}
+
     </div>
     
 </body>
